--- a/01-frontend.yml
+++ b/01-frontend.yml
@@ -26,7 +26,7 @@
 
     - name: Copy roboshop configuration
       ansible.builtin.copy:
-        src: Roboshop.conf
+        src: roboshop.conf
         dest: /etc/nginx/default.d/roboshop.conf
 
     - name: Start Nginx service
