--- a/01-mongodb.yml
+++ b/01-mongodb.yml
@@ -1,6 +1,6 @@
 - name: Setup MongoDB
   hosts: all
-  becomes: yes
+  become: yes
   tasks:
     - name: Copy MongoDB Repo File
       ansible.builtin.copy:
