--- a/Roles/common/tasks/nodejs.yml
+++ b/Roles/common/tasks/nodejs.yml
@@ -1,11 +1,14 @@
 - name: Configuring NodeJS Repos
-  ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x
+  ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x | bash
 
-- name: Install MongoDB Server
+- name: Install NodeJS
   ansible.builtin.yum:
     name: nodejs
     state: installed
 
+- name: App prerequisites
+  ansible.builtin.import_tasks:
+    file: app_presetup.yml
 
 
 
