--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -26,7 +26,7 @@
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: Start Nginx Service
-  ansible.builtin.systemD:
+  ansible.builtin.systemd:
     state: restarted
     name: nginx
     enabled: true
