--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -29,15 +29,15 @@
 
 
 
-  app_presetup
+  #app_presetup
   
-  status-check
+  #status-check
   
-  echo -e "${color} Install NodeJS Dependencies${nocolor}"
-  npm install &>>${log_file}
+  #echo -e "${color} Install NodeJS Dependencies${nocolor}"
+  #npm install &>>${log_file}
   
-  status_check
+  #status_check
   
-  systemD_setup
+  #systemD_setup
   
-  status_check
+  #status_check
