--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -10,6 +10,18 @@
   ansible.builtin.import_tasks:
     file: app_presetup.yml
 
+- name: Load NodeJS Dependencies
+  ansible.builtin.shell: npm install
+  args:
+       chdir: /app
+
+- name: Set up systemd
+  ansible.builtin.import_tasks:
+    file: systemd_setup.yml
+
+
+
+
 
 
 
